# rappi-technical-case

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  database.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  health.py  insights.py
backend/app/services/: chat_service.py  data_profiler.py  insights_config.py  insights_service.py  llm_provider.py  query_service.py  session_service.py  viz_service.py
backend/app/templates/: business_context.j2  insights_prompt.j2  response_rules.j2  system_prompt.j2
backend/tests/: conftest.py  test_chat_service.py  test_database.py  test_health.py  test_insights_service.py  test_llm_provider.py  test_query_service.py  test_routers.py  test_session_service.py  test_sql_validator.py  test_viz_service.py
docs/brainstorms/: 2026-03-29-automatic-insights-system-brainstorm.md
docs/plans/: 2026-03-28-feat-rappi-analytics-chatbot-plan.md  2026-03-29-feat-automatic-insights-system-plan.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: header.tsx  input-bar.tsx  sidebar.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  input.tsx  spinner.tsx
frontend/src/hooks/: use-media-query.ts
frontend/src/lib/: api.ts  viz-utils.ts
frontend/src/stores/: chat-store.ts  insights-store.ts  session-store.ts
frontend/src/types/: api.ts
(+22 files in other folders)
